Realizado entidade pagamento
